# cpr-indoornav-jackal

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
config/: bridge_gx5.yaml  bridge_um7.yaml  indoornav_gx5.yaml  indoornav_um7.yaml
launch/: bridge_relay.launch  indoornav_docking_controller.launch  indoornav_imu.launch  indoornav_wireless.launch  jackal_docking.launch  jackal_indoornav.launch  load_bridge_params.launch  platform_adaptor.launch  power_monitor.launch  safety_stop.launch
launch/include/: bridge.launch.xml  relays.launch.xml
scripts/: environment  install  jackal_power_monitor  jackal_safety_stop  jackal_twist_repub  jackal_twist_stamped  setup_docking  start_jackal_bridge
urdf/: indoornav_jackal.urdf.xacro
