<?xml version="1.0"?>
<package format="2">
  <name>cpr_indoornav_jackal</name>
  <version>0.3.2</version>
  <description>Additional packages and scripts for running IndoorNav on the Jackal</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cpr_indoornav_base</exec_depend>
  <exec_depend>jackal_description</exec_depend>
  <exec_depend>jackal_base</exec_depend>
  <exec_depend>jackal_msgs</exec_depend>
  <exec_depend>launch_delay</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>um7</exec_depend>

  <export>
  </export>
</package>
